[package]
name = "rsw-img-effects"
version = "0.1.0"
authors = ["Oumar Barry <oumar.barry1202@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.80"
base64 = "0.13.0"
image = "0.24.2"

[dependencies.web-sys]
version = "0.3.57"
features = ["console"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
